all-inputs-created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 </head>
 
 <body>
+    <h2 class="m-bottom">Inserisci i tuoi dati di viaggio:</h2>
+    <label for=""></label>
+    <div>Nome passeggero:<input type="text" class="m-bottom"></div>
+    <div>Distanza del percorso in chilometri:<input type="number" min="10" class="m-bottom"></div>
+    <div>Fascia d'età:
+        <select name="age-range" id="" class="m-bottom">
+            <option value="underage" class="m-bottom">0/17</option>
+            <option value="adult" class="m-bottom">18/64</option>
+            <option value="over-65" class="m-bottom">65+</option>
+        </select>
+    </div>
+    <button class="m-bottom">Genera biglietto</button>
+    <button class="m-bottom">Annulla</button>
     <script src="./script.js"></script>
 </body>
 
