--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
 </head>
 
 <body>
-    <h2 class="m-bottom">Inserisci i tuoi dati di viaggio:</h2>
+    <h2 class="m-bottom-2">Inserisci i tuoi dati di viaggio:</h2>
     <label for=""></label>
-    <div>Nome passeggero:<input type="text" class="m-bottom"></div>
-    <div>Distanza del percorso in chilometri:<input type="number" min="10" class="m-bottom"></div>
+    <div>Nome passeggero:<input type="text" class="m-bottom-2"></div>
+    <div>Distanza del percorso in chilometri:<input type="number" min="10" class="m-bottom-2"></div>
     <div>Fascia d'età:
-        <select name="age-range" id="" class="m-bottom">
-            <option value="underage" class="m-bottom">0/17</option>
-            <option value="adult" class="m-bottom">18/64</option>
-            <option value="over-65" class="m-bottom">65+</option>
+        <select name="age-range" id="" class="m-bottom-2">
+            <option value="underage" class="m-bottom-2">0/17</option>
+            <option value="adult" class="m-bottom-2">18/64</option>
+            <option value="over-65" class="m-bottom-2">65+</option>
         </select>
     </div>
-    <button class="m-bottom">Genera biglietto</button>
-    <button class="m-bottom">Annulla</button>
+    <button class="m-bottom-2">Genera biglietto</button>
+    <button class="m-bottom-2">Annulla</button>
+    <hr>
+    <h2 class="m-bottom-1">Il tuo biglietto:</h2>
+    <div class="m-bottom-1"><strong>Nome passeggero:</strong></div>
+    <div class="m-bottom-1"><strong>Offerta:</strong></div>
+    <div class="m-bottom-1"><strong>Carrozza:</strong></div>
+    <div class="m-bottom-1"><strong>Codice treno:</strong></div>
+    <div class="m-bottom-1"><strong>Prezzo del biglietto:</strong></div>
+
     <script src="./script.js"></script>
 </body>
 
