--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 <body>
     <h2 class="m-bottom-2">Inserisci i tuoi dati di viaggio:</h2>
     <label for=""></label>
-    <div>Nome passeggero:<input type="text" class="m-bottom-2"></div>
-    <div>Distanza del percorso in chilometri:<input type="number" min="10" class="m-bottom-2"></div>
+    <div>Nome passeggero:<input type="text" id="passenger-name" class="m-bottom-2"></div>
+    <div>Distanza del percorso in chilometri:<input type="number" min="10" value="10" id="travel-distance"
+            class="m-bottom-2"></div>
     <div>Fascia d'età:
-        <select name="age-range" id="" class="m-bottom-2">
-            <option value="underage" class="m-bottom-2">0/17</option>
-            <option value="adult" class="m-bottom-2">18/64</option>
-            <option value="over-65" class="m-bottom-2">65+</option>
+        <select name="age-range" id="age-range" class="m-bottom-2">
+            <option value="underage" id="underage" class="m-bottom-2">0/17</option>
+            <option value="adult" id="adult" class="m-bottom-2">18/64</option>
+            <option value="over-65" id="over-65" class="m-bottom-2">65+</option>
         </select>
     </div>
-    <button class="m-bottom-2">Genera biglietto</button>
-    <button class="m-bottom-2">Annulla</button>
+    <button id="generate-ticket" class="m-bottom-2">Genera biglietto</button>
+    <button id="undo" class="m-bottom-2">Annulla</button>
     <hr>
-    <h2 class="m-bottom-1">Il tuo biglietto:</h2>
-    <div class="m-bottom-1"><strong>Nome passeggero:</strong></div>
-    <div class="m-bottom-1"><strong>Offerta:</strong></div>
-    <div class="m-bottom-1"><strong>Carrozza:</strong></div>
-    <div class="m-bottom-1"><strong>Codice treno:</strong></div>
-    <div class="m-bottom-1"><strong>Prezzo del biglietto:</strong></div>
+    <h2 class="m-bottom-1 hidden">Il tuo biglietto:</h2>
+    <div id="print-name" class="m-bottom-1 hidden"><strong>Nome passeggero:</strong></div>
+    <div id="print-discount" class="m-bottom-1 hidden"><strong>Offerta:</strong></div>
+    <div id="print-car" class="m-bottom-1 hidden"><strong>Carrozza:</strong></div>
+    <div id="print-code" class="m-bottom-1 hidden"><strong>Codice treno:</strong></div>
+    <div id="print-price" class="m-bottom-1 hidden"><strong>Prezzo del biglietto:</strong></div>
 
     <script src="./script.js"></script>
 </body>
