--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <label for=""></label>
     <div>Nome passeggero:<input type="text" id="passenger-name" class="m-bottom-2"></div>
     <div>Distanza del percorso in chilometri:<input type="number" min="10" value="10" id="travel-distance"
-            class="m-bottom-2"></div>
+            class="m-bottom-2">
+    </div>
     <div>Fascia d'età:
-        <select name="age-range" id="age-range" class="m-bottom-2">
-            <option value="underage" id="underage" class="m-bottom-2">0/17</option>
-            <option value="adult" selected id="adult" class="m-bottom-2">18/64</option>
+        <select id="age-range" name="age-range" class="m-bottom-2">
+            <option value="underage" class="m-bottom-2">0/17</option>
+            <option value="adult" selected class="m-bottom-2">18/64</option>
             <option value="over-65" id="over-65" class="m-bottom-2">65+</option>
         </select>
     </div>
